--- a/me-now.html
+++ b/me-now.html
@@ -19,45 +19,48 @@
     </ul>
   </div>
   <div class="content">
-    <h2 class="accordion">Section 1</h2>
+    <h2 class="accordion">How I Got Here [+]</h2>
     <div>
       <p>
-      Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-      ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-      amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-      odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+        <table>
+          <tr>
+            <td>November 1990</td>
+            <td>Born in Wichita, KS</td>
+          </tr>
+          <tr>
+            <td>August 2009</td>
+            <td>Moved to Tulsa, OK to attend the University of Tulsa</td>
+          </tr>
+          <tr>
+            <td>May 2013</td>
+            <td>Graduated college with Chemical Engineering degree and started working in Tulsa</td>
+          </tr>
+          <tr>
+            <td>October 2015</td>
+            <td>Quit job to visit four countries in Europe with fianc&#233;e and prepare to move</td>
+          </tr>
+          <tr>
+            <td>January 2016</td>
+            <td>Moved to Federal Way, WA to start school at Galvanize</td>
+          </tr>
+        </table>
       </p>
     </div>
-    <h2 class="accordion">Section 2</h2>
+    <h2 class="accordion">Section 2 [+]</h2>
     <div>
       <p>
-      Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
-      purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
-      velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
-      suscipit faucibus urna.
       </p>
     </div>
-    <h2 class="accordion">Section 3</h2>
+    <h2 class="accordion">Section 3 [+]</h2>
     <div>
       <p>
-      Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
-      Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
-      ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
-      lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
       </p>
     </div>
-    <h2 class="accordion">Section 4</h2>
+    <h2 class="accordion">Section 4 [+]</h2>
     <div>
       <p>
-      Cras dictum. Pellentesque habitant morbi tristique senectus et netus
-      et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
-      faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
-      mauris vel est.
       </p>
       <p>
-      Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
-      Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-      inceptos himenaeos.
       </p>
     </div>
   </div>
