Add images and second page HTML

--- a/me-now.html
+++ b/me-now.html
@@ -46,23 +46,25 @@
         </table>
       </p>
     </div>
-    <h2 class="accordion">Section 2 [+]</h2>
+    <h2 class="accordion">Hobbies [+]</h2>
     <div>
-      <p>
-      </p>
+      <ul>
+        <li>- Gardening</li>
+        <li>- Gaming</li>
+        <li>- Rec Sports</li>
+        <li>- Cooking</li>
+        <li>- Road Trips</li>
+      </ul>
     </div>
-    <h2 class="accordion">Section 3 [+]</h2>
+    <h2 class="accordion">About Me [+]</h2>
     <div>
-      <p>
-      </p>
+      <ul>
+        <li></li>
+      </ul>
     </div>
-    <h2 class="accordion">Section 4 [+]</h2>
-    <div>
-      <p>
-      </p>
-      <p>
-      </p>
-    </div>
+  </div>
+  <div class="pic">
+    <img src="personal-pic.jpg" height="300" width="300">
   </div>
 </body>
 </html>
