Add final content for page

--- a/me-later.html
+++ b/me-later.html
@@ -19,11 +19,24 @@
     </ul>
   </div>
   <div class="content">
-    <h2 class="accordion">How I Got Here [+]</h2>
+    <h2 class="accordion">What I Am Excited For [+]</h2>
     <div>
+      <ul>
+        <li>- Learning new things at Galvanize</li>
+        <li>- Living in a new city and meeting new people</li>
+        <li>- Getting married in October</li>
+        <li>- Trying skiing in British Columbia</li>
+        <li>- Learning fly fishing</li>
+      </ul>
     </div>
-    <h2 class="accordion">How I Got Here [+]</h2>
+    <h2 class="accordion">Life Goals [+]</h2>
     <div>
+      <ul>
+        <li>- Own land for a large garden and animals</li>
+        <li>- Travel to many countries</li>
+        <li>- Find a job for a company working in sustainable energy</li>
+        <li>- Build a tiny house</li>
+      </ul>
     </div>
   </div>
   <div class="pic">
