--- a/me-now.html
+++ b/me-now.html
@@ -59,7 +59,11 @@
     <h2 class="accordion">About Me [+]</h2>
     <div>
       <ul>
-        <li></li>
+        <li>- I have two older brothers in Wichita and one younger in Tulsa</li>
+        <li>- I love to travel, but this is my first time living outside Kansas or Oklahoma</li>
+        <li>- I have two dogs, a cat, a rat, and a beta fish</li>
+        <li>- I built a gaming computer. My favorite game is Rocket League</li>
+        <li>- My favorite sport to play is Ultimate (formerly called Ultimate Frisbee) and I've played for 9 years</li>
       </ul>
     </div>
   </div>
