Fix errors revealed in HTML checker

--- a/me-later.html
+++ b/me-later.html
@@ -41,7 +41,7 @@
   </div>
   <div class="pic">
     <h3>Thanks for reading!</h3>
-    <img src="thanks.gif" height="150" width="300">
+    <img src="thanks.gif" height="150" width="300" alt="Dwight saying thanks">
   </div>
 </body>
 </html>
