--- a/me-now.html
+++ b/me-now.html
@@ -21,30 +21,28 @@
   <div class="content">
     <h2 class="accordion">How I Got Here [+]</h2>
     <div>
-      <p>
-        <table>
-          <tr>
-            <td>November 1990</td>
-            <td>Born in Wichita, KS</td>
-          </tr>
-          <tr>
-            <td>August 2009</td>
-            <td>Moved to Tulsa, OK to attend the University of Tulsa</td>
-          </tr>
-          <tr>
-            <td>May 2013</td>
-            <td>Graduated college with Chemical Engineering degree and started working in Tulsa</td>
-          </tr>
-          <tr>
-            <td>October 2015</td>
-            <td>Quit job to visit four countries in Europe with fianc&#233;e and prepare to move</td>
-          </tr>
-          <tr>
-            <td>January 2016</td>
-            <td>Moved to Federal Way, WA to start school at Galvanize</td>
-          </tr>
-        </table>
-      </p>
+      <table>
+        <tr>
+          <td>November 1990</td>
+          <td>Born in Wichita, KS</td>
+        </tr>
+        <tr>
+          <td>August 2009</td>
+          <td>Moved to Tulsa, OK to attend the University of Tulsa</td>
+        </tr>
+        <tr>
+          <td>May 2013</td>
+          <td>Graduated college with Chemical Engineering degree and started working in Tulsa</td>
+        </tr>
+        <tr>
+          <td>October 2015</td>
+          <td>Quit job to visit four countries in Europe with fianc&#233;e and prepare to move</td>
+        </tr>
+        <tr>
+          <td>January 2016</td>
+          <td>Moved to Federal Way, WA to start school at Galvanize</td>
+        </tr>
+      </table>
     </div>
     <h2 class="accordion">Hobbies [+]</h2>
     <div>
@@ -68,7 +66,7 @@
     </div>
   </div>
   <div class="pic">
-    <img src="personal-pic.jpg" height="300" width="300">
+    <img src="personal-pic.jpg" height="300" width="300" alt="A pic of me">
   </div>
 </body>
 </html>
