Update project to move to Surge
 - Change home page name to index.html and update links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <ul>
       <li class="spacer"></li>
-      <li><a href="me-now.html" class="hvr-fade">Who I Am</a></li>
+      <li><a href="" class="hvr-fade">Who I Am</a></li>
       <li><a href="me-later.html" class="hvr-fade">Who I Want To Be</a></li>
     </ul>
   </div>
